Implement get books for user
