# docs/swagger.yaml
@@ -168,6 +168,145 @@ paths:
       summary: ping example
       tags:
       - example
+  /admin/books:
+    get:
+      consumes:
+      - application/json
+      description: Get all books
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved all books
+          schema:
+            $ref: '#/definitions/models.Book'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get all books
+      tags:
+      - admin
+    post:
+      consumes:
+      - application/json
+      description: Create a book
+      parameters:
+      - description: Book object
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/models.CreateBook'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Successfully created book
+          schema:
+            $ref: '#/definitions/models.Book'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Create a book
+      tags:
+      - admin
+  /admin/books/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a book
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: Successfully deleted book
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Delete a book
+      tags:
+      - admin
+    put:
+      consumes:
+      - application/json
+      description: Update a book
+      parameters:
+      - description: Book ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Book object
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateBook'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully updated book
+          schema:
+            $ref: '#/definitions/models.Book'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Update a book
+      tags:
+      - admin
   /admin/login:
     post:
       consumes:
@@ -303,142 +442,44 @@ paths:
       summary: Update user by username
       tags:
       - admin
-  /books:
+  /user/books:
     get:
-      description: Get a list of all books with optional pagination
+      consumes:
+      - application/json
+      description: Get all books
       parameters:
-      - default: 0
-        description: Offset for pagination
+      - description: Genre
         in: query
-        name: offset
-        type: integer
-      - default: 10
-        description: Limit for pagination
+        name: genre
+        type: string
+      - description: Author
         in: query
-        name: limit
+        name: author
+        type: string
+      - description: Year
+        in: query
+        name: year
         type: integer
       produces:
       - application/json
       responses:
         "200":
-          description: Successfully retrieved list of books
-          schema:
-            items:
-              $ref: '#/definitions/models.Book'
-            type: array
-      summary: Get all books with pagination
-      tags:
-      - books
-    post:
-      consumes:
-      - application/json
-      description: Create a new book with the given input data
-      parameters:
-      - description: Create book object
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateBook'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Successfully created book
+          description: Successfully retrieved all books
           schema:
             $ref: '#/definitions/models.Book'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
         "401":
           description: Unauthorized
           schema:
             type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
       security:
-      - JwtAuth: []
-      summary: Create a new book
+      - BearerAuth: []
+      summary: Get all books
       tags:
-      - books
-  /books/{id}:
-    delete:
-      description: Delete the book with the given ID
-      parameters:
-      - description: Book ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: Successfully deleted book
-          schema:
-            type: string
-        "404":
-          description: book not found
-          schema:
-            type: string
-      summary: Delete a book by ID
-      tags:
-      - books
-    get:
-      description: Get details of a book by its ID
-      parameters:
-      - description: Book ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully retrieved book
-          schema:
-            $ref: '#/definitions/models.Book'
-        "404":
-          description: Book not found
-          schema:
-            type: string
-      summary: Find a book by ID
-      tags:
-      - books
-    put:
-      consumes:
-      - application/json
-      description: Update the book details for the given ID
-      parameters:
-      - description: Book ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Update book object
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/models.UpdateBook'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully updated book
-          schema:
-            $ref: '#/definitions/models.Book'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: book not found
-          schema:
-            type: string
-      summary: Update a book by ID
-      tags:
-      - books
+      - user
   /user/login:
     post:
       consumes:
